adding latest file

--- a/index.html
+++ b/index.html
@@ -1,103 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Randhir Kumar | DevOps Engineer & Cloud Architect</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f4;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1, h2, h3 {
-      color: #2c3e50;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    .contact a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    ul {
-      padding-left: 20px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Randhir Kumar</h1>
-    <p class="contact">
-      <strong>Phone:</strong> +91-9971212424<br>
-      <strong>Email:</strong> <a href="mailto:randhir2021@gmail.com">randhir2021@gmail.com</a><br>
-      <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/randhir-kumar-1b0b59b6/">randhir-kumar-1b0b59b6</a><br>
-      <strong>Location:</strong> Pune, India
-    </p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Randhir Kumar | DevOps Engineer & Cloud Architect</title>
+    <meta name="description" content="Portfolio of Randhir Kumar - DevOps Engineer and Cloud Architect with 8+ years experience in AWS, Kubernetes, Terraform, and CI/CD" />
+    <meta name="author" content="Randhir Kumar" />
 
-    <div class="section">
-      <h2>Career Summary</h2>
-      <p>DevOps Engineer | Cloud Architect | 8+ years of experience</p>
-    </div>
+    <meta property="og:title" content="Randhir Kumar | DevOps Engineer & Cloud Architect" />
+    <meta property="og:description" content="Portfolio of Randhir Kumar - DevOps Engineer and Cloud Architect with 8+ years experience in AWS, Kubernetes, Terraform, and CI/CD" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <div class="section">
-      <h2>Certifications</h2>
-      <ul>
-        <li>AWS Certified Solutions Architect - Associate (2018-09)</li>
-        <li>AWS Certified SysOps Administrator - Associate (2019-04)</li>
-        <li>AWS Certified Solutions Architect – Professional (2020-06)</li>
-        <li>AWS Certified Security Specialty (2021-06)</li>
-      </ul>
-    </div>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
 
-    <div class="section">
-      <h2>Success Stories</h2>
-      <ul>
-        <li>Onboarded dozens of applications on containers with accelerated "time to production"</li>
-        <li>Created customized CI/CD pipelines for Docker-based microservices</li>
-        <li>Developed a cloud-native Terraform-based infrastructure provisioning framework</li>
-        <li>Helped multiple clients migrate infrastructure to AWS using DevOps best practices</li>
-        <li>Maintained over 200 AWS accounts and supported scripting/operations</li>
-        <li>Saved thousands of dollars by identifying infrastructure improvements</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Experience</h2>
-      <ul>
-        <li><strong>T-Systems India</strong> | Consultant (DevOps & Architect) | 2021 - Present</li>
-        <li><strong>ZS Associates</strong> | Sr Cloud Administrator | 2019 - 2021</li>
-        <li><strong>ZS Associates</strong> | Cloud Administrator | 2017 - 2019</li>
-        <li><strong>Cybage Software</strong> | Technical Support Engineer | 2016 - 2017</li>
-        <li><strong>HCL Technologies</strong> | Senior Analyst | 2013 - 2016</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Education</h2>
-      <p><strong>Punjab Technical University</strong><br>
-      Bachelor of Science (IT), 2010 - 2013</p>
-    </div>
-
-    <div class="section">
-      <h2>Skills & Competencies</h2>
-      <ul>
-        <li>DevOps, SRE, GitOps</li>
-        <li>AWS, Kubernetes, Docker</li>
-        <li>CI/CD Pipelines (TeamCity)</li>
-        <li>Terraform, Python, Scripting Automation</li>
-        <li>Cloud Computing, Solution Architecture</li>
-      </ul>
-    </div>
-  </div>
-</body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
